# vati

./: .env.example  .gitignore  CONSTITUTION.md  README.md  doctrine.md  plan.md  proof.md  pyproject.toml  status.html
.claude/commands/: gate.md  goal.md  needle.md  pope.md
.claude/workflows/: pope-mega.js  pope-pro.js  pope.js
cockpit/: package.json  pnpm-lock.yaml
cockpit/app/: layout.tsx  page.tsx
cockpit/components/: bet-card.tsx  calibration-chart.tsx  consensus-gate.tsx  cross-domain-map.tsx  data-health.tsx  entity-spine.tsx  hypothesis-engine.tsx  retro-benchmark.tsx  supply-graph.tsx  universe-benchmark.tsx
cockpit/lib/: db.ts
data/: harvest_state.json
engine/: __init__.py  backtest.py  bet.py  cli.py  consensus.py  cost.py  db.py  decisions.py  detector.py  discover.py  entity.py  entity_candidates.py  experiment.py  forecast.py  graph.py  holdout.py  hypothesis.py  indicators.py  ladder.py  locator.py  quality.py  rawstore.py  retro.py  saturation.py  schemas.py  seed.py  sharpen.py  significance.py  store.py  universe.py
engine/adapters/: __init__.py  answer.py  extract.py  html_to_markdown.py  llm.py  pdf_to_text.py  proxy.py  search.py  smoke.py
engine/forecastbench/: SUBMIT.md  __init__.py  backtest_all.py  market.py  (+5 more)
experiments/: REGISTRY.md  forward_calls_seal.sha256  holdout_questions.jsonl  protocol_locator.yaml  protocol_v1.yaml  protocol_v2.yaml
landing/: next.config.ts  package.json  pnpm-lock.yaml
paper_beyond_brier/: beyond_brier.tex
research/: long-horizon-theses.html
site/: next.config.ts  package.json  pnpm-lock.yaml
(+118 files in other folders)
