[project]
name = "predictthefuture-engine"
version = "0.0.1"
description = "Foresight engine — schemas, storage, CLI. The thin scaffolding around a human+AI thinking loop."
requires-python = ">=3.11"
# Deliberately tiny. trafilatura cleans fetched pages → Markdown; httpx is the one HTTP
# client shared by the Phase-2 networked adapters (Exa keyless search; LLM adapter uses
# stdlib urllib). Neither is touched by init-db/seed/status.
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "trafilatura>=1.12",
    "httpx>=0.27",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
